# n.koldline

./: .gitignore  .gitmodules
Assets/: Localization Settings.asset  packages.config
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
Assets/AddressableAssetsData/AssetGroups/: Default Local Group.asset  Localization-Assets-Shared.asset  Localization-Locales.asset  Localization-String-Tables-English (en).asset  Localization-String-Tables-Japanese (Japan) (ja-JP).asset  Localization-String-Tables-Korean (South Korea) (ko-KR).asset
Assets/Locales/: l10nTable Shared Data.asset  l10nTable.asset  l10nTable.csv  l10nTable.template.csv  l10nTable_en.asset  l10nTable_ja-JP.asset  l10nTable_ko-KR.asset  merge.py  merge.sh
Assets/Resources/: RasterizeVector
Assets/Resources/CallingInteractions/: CallingInteractionGraph.json
Assets/Resources/Musics/: Credits.md
Assets/Resources/Scripts/tts~/: .gitignore  README.md  l10n-audio.en.csv  l10n-audio.ja.csv  l10n-audio.ko.csv  nations.en.csv  nations.ja.csv  nations.ko.csv  pyproject.toml  run.sh
Assets/Resources/Scripts/tts~/src/ext/: bin_csv.py
Assets/Resources/Scripts/tts~/src/tts/: __init__.py  bin.py  tts_engine.py
Assets/Scenes/: InGame.unity  Intro.unity
Assets/Scripts/: EditorDebug.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/UI Toolkit/: PanelSettings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+132 files in other folders)
